# WasmEdge_AndroidExample

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hangedfish/wasmedge/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/cmake/: FindBoost.cmake  Findspdlog.cmake
app/src/main/java/com/hangedfish/wasmedge/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hangedfish/wasmedge/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
